tests/sin_basic.out
Parse error: syntax error, unexpected '$number' (T_VARIABLE), expecting ',' or ';' in /Users/idevz/code/z/git/weibo-mesh/php-use/tests/sin_basic.php on line 6