tests/sin_basic.php
<?php


echo "*** Test by calling method or function with its expected arguments ***\n"

$number = 



var_dump(sin( $number ) );


?>
===DONE===
